--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>导航页</title>
+
+    <style>
+        a{
+            display: block;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
-测试网页
+<a href="./liveVideo.html">电视</a>
+<a href="./videos.html">电影</a>
+<a href="./musics.html">音乐</a>
+<a href="./books.html">书籍</a>
+<a href="./books.html">游戏</a>
 </body>
 </html>
