--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     </style>
 </head>
 <body>
-<a href="./liveVideo.html">电视</a>
-<a href="./videos.html">电影</a>
 <a href="./musics.html">音乐</a>
 <a href="./books.html">书籍</a>
+<a href="./liveVideo.html">电视</a>
+<a href="./videos.html">电影</a>
 <a href="./books.html">游戏</a>
+<a href="./金盒子.txt">金盒子</a>
 </body>
 </html>
