--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <a href="./videos.html">电影</a>
 <a href="./books.html">游戏</a>
 <a href="./金盒子.txt">金盒子</a>
+<a href="./一碗清汤芥麦面.pdf">一碗清汤芥麦面</a>
 </body>
 </html>
