--- a/books.html
+++ b/books.html
@@ -7,6 +7,8 @@
         a{
             display: block;
             padding: 10px;
+            font-size:30px;
+            margin: 15px;
         }
     </style>
 </head>
