--- a/books.html
+++ b/books.html
@@ -30,6 +30,7 @@
 <a href="./books/普罗旺斯的一年.txt">普罗旺斯的一年</a>
 <a href="./books/重返普罗旺斯.txt">重返普罗旺斯</a>
 <a href="./books/金盒子.txt">金盒子</a>
+<a href="./books/天蓝色的彼岸.txt">天蓝色的彼岸</a>
 <a href="./books/青铜葵花.txt">青铜葵花</a>
 <a href="./books/鲁滨逊漂流记.txt">鲁滨逊漂流记</a>
 
