--- a/books.html
+++ b/books.html
@@ -17,6 +17,7 @@
 <a href="./books/CuoreHeart爱的教育.pdf">CuoreHeart爱的教育</a>
 <a href="./books/佐贺的超级阿嬷.pdf">佐贺的超级阿嬷</a>
 <a href="./books/解忧杂货铺.txt">解忧杂货铺</a>
+<a href="./books/解忧杂货铺1.txt">解忧杂货铺1</a>
 <a href="./books/假如给我三天光明.txt">假如给我三天光明</a>
 <a href="./books/在困难的日子里.txt">在困难的日子里</a>
 <a href="./books/小桔灯.txt">小桔灯</a>
