--- a/books.html
+++ b/books.html
@@ -17,7 +17,6 @@
 <a href="./books/CuoreHeart爱的教育.pdf">CuoreHeart爱的教育</a>
 <a href="./books/佐贺的超级阿嬷.pdf">佐贺的超级阿嬷</a>
 <a href="./books/解忧杂货铺.txt">解忧杂货铺</a>
-<a href="./books/解忧杂货铺1.txt">解忧杂货铺1</a>
 <a href="./books/假如给我三天光明.txt">假如给我三天光明</a>
 <a href="./books/在困难的日子里.txt">在困难的日子里</a>
 <a href="./books/小桔灯.txt">小桔灯</a>
@@ -33,6 +32,7 @@
 <a href="./books/金盒子.txt">金盒子</a>
 <a href="./books/天蓝色的彼岸.txt">天蓝色的彼岸</a>
 <a href="./books/青铜葵花.txt">青铜葵花</a>
+<a href="./books/海底两万里.txt">海底两万里</a>
 <a href="./books/鲁滨逊漂流记.txt">鲁滨逊漂流记</a>
 
 </body>
