--- a/game/russiabox.html
+++ b/game/russiabox.html
@@ -465,7 +465,7 @@
                 moveRight();
                 break;
             case "ArrowDown":
-                fallDonwFast();
+                fallDownFast();
                 break;
         }
     }
