--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <a href="./musics.html">音乐</a>
 <a href="./books.html">书籍</a>
 <a href="./liveVideo.html">电视</a>
-<a href="./videos.html">电影</a>
-<a href="./books.html">游戏</a>
+<a href="./movies.html">电影</a>
+<a href="./game/games.html">游戏</a>
 </body>
 </html>
