--- a/musics.html
+++ b/musics.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/request.js"></script>
 
@@ -67,15 +67,15 @@
         });
     }
 
-    // loadXMLDoc();//¼ÓÔØÔ¶³ÌÊı¾İ
+    // loadXMLDoc();//åŠ è½½è¿œç¨‹æ•°æ®
 
-    // ±¾µØ²âÊÔÊı¾İ
-    parseResult("[{\"url\":\"./musics/¾Õ´ÎÀÉµÄÏÄÌì.mp3\",\"type\":\"music\",\"name\":\"¾Õ´ÎÀÉµÄÏÄÌì.mp3\"}," +
-    "{\"url\":\"./musics/¹Ê¹¬µÄ¼ÇÒä.mp3\",\"type\":\"music\",\"name\":\"¹Ê¹¬µÄ¼ÇÒä.mp3\"}," +
-    "{\"url\":\"./musics/ÇïÌìÀïµÄÉîÀ¶.mp3\",\"type\":\"music\",\"name\":\"ÇïÌìÀïµÄÉîÀ¶.mp3\"}," +
-    "{\"url\":\"./musics/Óáå°Ã÷-°®µÄ»ª¶û×È.mp3\",\"type\":\"music\",\"name\":\"Óáå°Ã÷-°®µÄ»ª¶û×È.mp3\"}," +
-    "{\"url\":\"./musics/SongTaste-ÔÂÏÂ¶À×Ã.mp3\",\"type\":\"music\",\"name\":\"SongTaste-ÔÂÏÂ¶À×Ã.mp3\"}," +
-    "{\"url\":\"./musics/Ã·ÓêÎ÷×Ó-Ò¹Ã÷.mp3\",\"type\":\"music\",\"name\":\"Ã·ÓêÎ÷×Ó-Ò¹Ã÷.mp3\"}" +
+    // æœ¬åœ°æµ‹è¯•æ•°æ®
+    parseResult("[{\"url\":\"./musics/èŠæ¬¡éƒçš„å¤å¤©.mp3\",\"type\":\"music\",\"name\":\"èŠæ¬¡éƒçš„å¤å¤©.mp3\"}," +
+    "{\"url\":\"./musics/æ•…å®«çš„è®°å¿†.mp3\",\"type\":\"music\",\"name\":\"æ•…å®«çš„è®°å¿†.mp3\"}," +
+    "{\"url\":\"./musics/ç§‹å¤©é‡Œçš„æ·±è“.mp3\",\"type\":\"music\",\"name\":\"ç§‹å¤©é‡Œçš„æ·±è“.mp3\"}," +
+    "{\"url\":\"./musics/ä¿çæ˜-çˆ±çš„åå°”å…¹.mp3\",\"type\":\"music\",\"name\":\"ä¿çæ˜-çˆ±çš„åå°”å…¹.mp3\"}," +
+    "{\"url\":\"./musics/SongTaste-æœˆä¸‹ç‹¬é…Œ.mp3\",\"type\":\"music\",\"name\":\"SongTaste-æœˆä¸‹ç‹¬é…Œ.mp3\"}," +
+    "{\"url\":\"./musics/æ¢…é›¨è¥¿å­-å¤œæ˜.mp3\",\"type\":\"music\",\"name\":\"æ¢…é›¨è¥¿å­-å¤œæ˜.mp3\"}" +
         "]");
 
 
