--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <a href="./books.html">书籍</a>
 <a href="./liveVideo.html">电视</a>
 <a href="./movies.html">电影</a>
-<a href="./game/games.html">游戏</a>
+<a href="./game/games.html"></a>
 </body>
 </html>
