--- a/movies.html
+++ b/movies.html
@@ -229,6 +229,9 @@
 {"title": "海底总动员", "url": "https://www.dgzhuorui.com:65/20201112/qSY0RHfC/1200kb/hls/index.m3u8"},
 {"title": "闪光少女", "url": "https://v4.szjal.cn/20200421/zLnP3cUN/index.m3u8"},
 {"title": "机器侠", "url": "https://video.buycar5.cn/20200912/XHrJIEa0/1000kb/hls/index.m3u8"},
+{"title": "绝地逃亡", "url": "https://video.buycar5.cn/20200903/TpvOJDXS/index.m3u8"},
+{"title": "流浪地球", "url": "https://3.mhbobo.com/20191031/NKMFo1UK/index.m3u8"},
+
     ];
 
 
