--- a/movies.html
+++ b/movies.html
@@ -204,7 +204,8 @@
 </video>
 
 
-<div class="internet_alert" style="margin-top: 10px">连接wifi看，否则会消耗手机流量
+<div class="internet_alert" style="margin-top: 10px">连接wifi看，否则会消耗手机流量。
+    <span style="color:red">切勿相信视频中的广告！</span>
     <span onclick="switchChannelPosition()" style="float: right;display: none">列表放在底部
             <span
                     class="switch_movie_list_label"
@@ -231,6 +232,7 @@
         {"title": "绝地逃亡", "url": "https://video.buycar5.cn/20200903/TpvOJDXS/index.m3u8"},
         {"title": "流浪地球", "url": "https://3.mhbobo.com/20191031/NKMFo1UK/index.m3u8"},
         {"title": "你好李焕英", "url": "https://lbjx9.com/?url=https://video.hcyunshang.cn/20210215/cEkErZnB/index.m3u8"},
+        {"title":"举起手来","url":"https://vod.bunediy.com/20200508/2ZkYVE6o/index.m3u8"}
     ];
 
 
