--- a/movies.html
+++ b/movies.html
@@ -9,7 +9,7 @@
     <title>movies</title>
     <style>
         .active {
-            color: red;
+            color: #7fb80e;
         }
 
         .switch_movie_label_checked {
@@ -205,7 +205,7 @@
 
 
 <div class="internet_alert" style="margin-top: 10px">连接wifi看，否则会消耗手机流量。
-    <span style="color:red">切勿相信视频中的广告！</span>
+    <span style="color:red">切勿相信视频中的诈骗广告！</span>
     <span onclick="switchChannelPosition()" style="float: right;display: none">列表放在底部
             <span
                     class="switch_movie_list_label"
