--- a/musics.html
+++ b/musics.html
@@ -76,7 +76,7 @@
     "{\"url\":\"./musics/秋天里的深蓝.mp3\",\"type\":\"music\",\"name\":\"秋天里的深蓝.mp3\"}," +
     "{\"url\":\"./musics/俞灏明-爱的华尔兹.mp3\",\"type\":\"music\",\"name\":\"俞灏明-爱的华尔兹.mp3\"}," +
     "{\"url\":\"./musics/SongTaste-月下独酌.mp3\",\"type\":\"music\",\"name\":\"SongTaste-月下独酌.mp3\"}," +
-    "{\"url\":\"./musics/梅雨西子-夜明.mp3\",\"type\":\"music\",\"name\":\"梅雨西子-夜明.mp3\"}" +
+    "{\"url\":\"./musics/梅雨西子-夜明.mp3\",\"type\":\"music\",\"name\":\"梅雨西子-夜明.mp3\"}," +
     "{\"url\":\"./musics/被遗弃的土豆-吹箫人去玉楼空.wav\",\"type\":\"music\",\"name\":\"被遗弃的土豆-吹箫人去玉楼空.wav\"}," +
     "{\"url\":\"./musics/晴天的周末在去学校的路上遇见喜欢的人.mp3\",\"type\":\"music\",\"name\":\"晴天的周末在去学校的路上遇见喜欢的人.mp3\"}," +
     "{\"url\":\"./musics/宗次郎-故乡的原风景.mp3\",\"type\":\"music\",\"name\":\"宗次郎-故乡的原风景.mp3\"}," +
