--- a/musics.html
+++ b/musics.html
@@ -79,7 +79,7 @@
     "{\"url\":\"./musics/梅雨西子-夜明.mp3\",\"type\":\"music\",\"name\":\"梅雨西子-夜明.mp3\"}," +
     "{\"url\":\"./musics/被遗弃的土豆-吹箫人去玉楼空.wav\",\"type\":\"music\",\"name\":\"被遗弃的土豆-吹箫人去玉楼空.wav\"}," +
     "{\"url\":\"./musics/晴天的周末在去学校的路上遇见喜欢的人.mp3\",\"type\":\"music\",\"name\":\"晴天的周末在去学校的路上遇见喜欢的人.mp3\"}," +
-    "{\"url\":\"./musics/宗次郎-故乡的原风景.mp3\",\"type\":\"music\",\"name\":\"宗次郎-故乡的原风景.mp3\"}," +
+    "{\"url\":\"./musics/宗次郎-故乡的原风景.mp3\",\"type\":\"music\",\"name\":\"宗次郎-故乡的原风景.mp3\"}" +
     
         "]");
 
