--- a/movies.html
+++ b/movies.html
@@ -232,7 +232,9 @@
         {"title": "绝地逃亡", "url": "https://video.buycar5.cn/20200903/TpvOJDXS/index.m3u8"},
         {"title": "流浪地球", "url": "https://3.mhbobo.com/20191031/NKMFo1UK/index.m3u8"},
         {"title": "你好李焕英", "url": "https://lbjx9.com/?url=https://video.hcyunshang.cn/20210215/cEkErZnB/index.m3u8"},
-        {"title":"举起手来","url":"https://vod.bunediy.com/20200508/2ZkYVE6o/index.m3u8"}
+        {"title":"举起手来","url":"https://vod.bunediy.com/20200508/2ZkYVE6o/index.m3u8"},
+        {"title":"罗小黑战记","url":"https://video.dious.cc/videos_2019_1/v_19rrhlbh27/1000kb/hls/index.m3u8"}
+
     ];
 
 
