修改图书页

--- a/books.html
+++ b/books.html
@@ -14,7 +14,6 @@
 </head>
 <body>
 <a href="./books/一碗清汤芥麦面.pdf">一碗清汤芥麦面</a>
-<a href="./books/CuoreHeart爱的教育.pdf">CuoreHeart爱的教育</a>
 <a href="./books/佐贺的超级阿嬷.pdf">佐贺的超级阿嬷</a>
 <a href="./books/解忧杂货铺.txt">解忧杂货铺</a>
 <a href="./books/假如给我三天光明.txt">假如给我三天光明</a>
@@ -34,6 +33,14 @@
 <a href="./books/青铜葵花.txt">青铜葵花</a>
 <a href="./books/海底两万里.txt">海底两万里</a>
 <a href="./books/鲁滨逊漂流记.txt">鲁滨逊漂流记</a>
+
+<hr>
+<a href="./books/CuoreHeart爱的教育.pdf">CuoreHeart爱的教育</a>
+<a href="./books/简爱（英文版）.txt">简爱（英文版）</a>
+<a href="./books/牛津书虫系列50本(英文版).txt">牛津书虫系列50本(英文版)</a>
+<a href="./books/格林童话英文版.txt">格林童话英文版</a>
+<a href="./books/绿野仙踪(英文版).txt">绿野仙踪(英文版)</a>
+<a href="./books/哈利波特1-7英文版.txt">哈利波特1-7英文版</a>
 
 </body>
 </html>
