更新电影页

--- a/movies.html
+++ b/movies.html
@@ -234,6 +234,7 @@
         {"title": "流浪地球", "url": "https://3.mhbobo.com/20191031/NKMFo1UK/index.m3u8"},
         {"title": "你好李焕英", "url": "https://lbjx9.com/?url=https://video.hcyunshang.cn/20210215/cEkErZnB/index.m3u8"},
         {"title":"举起手来","url":"https://vod.bunediy.com/20200508/2ZkYVE6o/index.m3u8"},
+        {"title":"鼠胆英雄","url":"https://kk.jinpuyuan.net/dp/?url=https://e.mahua-kb.com/20200924/TMfv8aQ7/index.m3u8"},
         {"title":"罗小黑战记","url":"https://video.dious.cc/videos_2019_1/v_19rrhlbh27/1000kb/hls/index.m3u8"}
 
     ];
