修改失效资源

--- a/movies.html
+++ b/movies.html
@@ -225,7 +225,7 @@
 <script>
     // 湖南卫视备用 http://112.50.243.8/PLTV/88888888/224/3221225827/1.m3u8
     const movieList = [
-        {"title": "十万个冷笑话", "url": "https://cache.pangujiexi.com:5566/m3u8cache/iqiyi/2b86d34cf3a2ba7ad59609d9eddf2cec.m3u8"},
+        {"title": "十万个冷笑话", "url": "https://v4.szjal.cn/20200429/LkOi4c7l/1000kb/hls/index.m3u8"},
         {"title": "决战刹马镇", "url": "https://video.buycar5.cn/20200920/vMkLfmGt/1000kb/hls/index.m3u8"},
         {"title": "海底总动员", "url": "https://www.dgzhuorui.com:65/20201112/qSY0RHfC/1200kb/hls/index.m3u8"},
         {"title": "闪光少女", "url": "https://v4.szjal.cn/20200421/zLnP3cUN/index.m3u8"},
