--- a/musics.html
+++ b/musics.html
@@ -81,6 +81,7 @@
     "{\"url\":\"./musics/晴天的周末在去学校的路上遇见喜欢的人.mp3\",\"type\":\"music\",\"name\":\"晴天的周末在去学校的路上遇见喜欢的人.mp3\"}," +
     "{\"url\":\"./musics/宗次郎-いつも何度でも.mp3\",\"type\":\"music\",\"name\":\"宗次郎-いつも何度でも.mp3\"}," +
     "{\"url\":\"./musics/ThePianoGuys-LoveStory.mp3\",\"type\":\"music\",\"name\":\"ThePianoGuys-LoveStory.mp3\"}," +
+    "{\"url\":\"./musics/天箫吟唱-飞越彩虹.mp3\",\"type\":\"music\",\"name\":\"天箫吟唱-飞越彩虹.mp3\"}," +
 
     "{\"url\":\"./musics/宗次郎-故乡的原风景.mp3\",\"type\":\"music\",\"name\":\"宗次郎-故乡的原风景.mp3\"}" +
     
