--- a/musics.html
+++ b/musics.html
@@ -72,6 +72,7 @@
     // 本地测试数据
     parseResult("[" +
         "{\"url\":\"./musics/菊次郎的夏天.mp3\",\"type\":\"music\",\"name\":\"菊次郎的夏天.mp3\"}," +
+        "{\"url\":\"./musics/儿时的夏日.mp3\",\"type\":\"music\",\"name\":\"儿时的夏日.mp3\"}," +
     "{\"url\":\"./musics/故宫的记忆.mp3\",\"type\":\"music\",\"name\":\"故宫的记忆.mp3\"}," +
     "{\"url\":\"./musics/秋天里的深蓝.mp3\",\"type\":\"music\",\"name\":\"秋天里的深蓝.mp3\"}," +
     "{\"url\":\"./musics/俞灏明-爱的华尔兹.mp3\",\"type\":\"music\",\"name\":\"俞灏明-爱的华尔兹.mp3\"}," +
@@ -82,9 +83,8 @@
     "{\"url\":\"./musics/宗次郎-いつも何度でも.mp3\",\"type\":\"music\",\"name\":\"宗次郎-いつも何度でも.mp3\"}," +
     "{\"url\":\"./musics/ThePianoGuys-LoveStory.mp3\",\"type\":\"music\",\"name\":\"ThePianoGuys-LoveStory.mp3\"}," +
     "{\"url\":\"./musics/天箫吟唱-飞越彩虹.mp3\",\"type\":\"music\",\"name\":\"天箫吟唱-飞越彩虹.mp3\"}," +
-
     "{\"url\":\"./musics/宗次郎-故乡的原风景.mp3\",\"type\":\"music\",\"name\":\"宗次郎-故乡的原风景.mp3\"}" +
-    
+
         "]");
 
 
