--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>导航页</title>
+    <title>总揽</title>
 
     <style>
         a{
@@ -13,10 +13,13 @@
     </style>
 </head>
 <body>
-<a href="./musics.html">音乐</a>
-<a href="./books.html">书籍</a>
-<a href="./liveVideo.html">电视</a>
-<a href="./movies.html">电影</a>
-<a href="./game/games.html"></a>
+    <a href="./musics.html">音乐</a>
+    <a href="./books.html">书籍</a>
+    <a href="./liveVideo.html">电视</a>
+    <a href="./movies.html">电影</a>
+    <a href="./game/games.html"></a>
+    
+    <p style="color: #828282;position:absolute;bottom:0;text-align: center;width: 100%;font-size: 10px;">*会不定时更新资源</p>
+
 </body>
 </html>
