--- a/game/games.html
+++ b/game/games.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <meta charset="UTF-8">
     <title>games</title>
     <style>
         a{
             display: block;
             padding: 10px;
+            color: #0033FF;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-<a href="./jigsaw.html">拼图</a>
-<a href="./russiabox.html">俄罗斯方块</a>
+<a href="./jigsaw.html">1.拼图</a>
+<a href="./russiabox.html">2.俄罗斯方块</a>
 
 
 </body>
