--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <meta charset="UTF-8">
     <title>总揽</title>
 
@@ -9,14 +10,16 @@
         a{
             display: block;
             padding: 10px;
+            text-decoration: none;
+            color: #0033FF;
         }
     </style>
 </head>
 <body>
-    <a href="./musics.html">音乐</a>
-    <a href="./books.html">书籍</a>
-    <a href="./liveVideo.html">电视</a>
-    <a href="./movies.html">电影</a>
+    <a href="./musics.html">1.音乐</a>
+    <a href="./books.html">2.书籍</a>
+    <a href="./liveVideo.html">3.电视</a>
+    <a href="./movies.html">4.电影</a>
     <a href="./game/games.html"></a>
     
     <p style="color: #828282;position:absolute;bottom:0;text-align: center;width: 100%;font-size: 10px;">*会不定时更新资源</p>
