电影名称修改

--- a/movies.html
+++ b/movies.html
@@ -225,18 +225,18 @@
 <script>
     // 湖南卫视备用 http://112.50.243.8/PLTV/88888888/224/3221225827/1.m3u8
     const movieList = [
-        {"title": "十万个冷笑话", "url": "https://v4.szjal.cn/20200429/LkOi4c7l/1000kb/hls/index.m3u8"},
-        {"title": "决战刹马镇", "url": "https://video.buycar5.cn/20200920/vMkLfmGt/1000kb/hls/index.m3u8"},
-        {"title": "海底总动员", "url": "https://www.dgzhuorui.com:65/20201112/qSY0RHfC/1200kb/hls/index.m3u8"},
-        {"title": "闪光少女", "url": "https://v4.szjal.cn/20200421/zLnP3cUN/index.m3u8"},
-        {"title": "机器侠", "url": "https://video.buycar5.cn/20200912/XHrJIEa0/1000kb/hls/index.m3u8"},
-        {"title": "绝地逃亡", "url": "https://video.buycar5.cn/20200903/TpvOJDXS/index.m3u8"},
-        {"title": "流浪地球", "url": "https://3.mhbobo.com/20191031/NKMFo1UK/index.m3u8"},
-        {"title": "你好李焕英", "url": "https://lbjx9.com/?url=https://video.hcyunshang.cn/20210215/cEkErZnB/index.m3u8"},
-        {"title":"大赢家","url":"https://vod2.buycar5.cn/20201027/hABFNvdL/1000kb/hls/index.m3u8"},
-        {"title":"举起手来","url":"https://vod.bunediy.com/20200508/2ZkYVE6o/index.m3u8"},
-        {"title":"鼠胆英雄","url":"https://kk.jinpuyuan.net/dp/?url=https://e.mahua-kb.com/20200924/TMfv8aQ7/index.m3u8"},
-        {"title":"罗小黑战记","url":"https://video.dious.cc/videos_2019_1/v_19rrhlbh27/1000kb/hls/index.m3u8"}
+        {"title": "十*万*个*冷*笑*话", "url": "https://v4.szjal.cn/20200429/LkOi4c7l/1000kb/hls/index.m3u8"},
+        {"title": "决*战*刹*马*镇", "url": "https://video.buycar5.cn/20200920/vMkLfmGt/1000kb/hls/index.m3u8"},
+        {"title": "海*底*总*动*员", "url": "https://www.dgzhuorui.com:65/20201112/qSY0RHfC/1200kb/hls/index.m3u8"},
+        {"title": "闪*光*少*女", "url": "https://v4.szjal.cn/20200421/zLnP3cUN/index.m3u8"},
+        {"title": "机*器*侠", "url": "https://video.buycar5.cn/20200912/XHrJIEa0/1000kb/hls/index.m3u8"},
+        {"title": "绝*地*逃*亡", "url": "https://video.buycar5.cn/20200903/TpvOJDXS/index.m3u8"},
+        {"title": "流*浪*地*球", "url": "https://3.mhbobo.com/20191031/NKMFo1UK/index.m3u8"},
+        {"title": "你*好*李*焕*英", "url": "https://lbjx9.com/?url=https://video.hcyunshang.cn/20210215/cEkErZnB/index.m3u8"},
+        {"title":"大*赢*家","url":"https://vod2.buycar5.cn/20201027/hABFNvdL/1000kb/hls/index.m3u8"},
+        {"title":"举*起*手*来","url":"https://vod.bunediy.com/20200508/2ZkYVE6o/index.m3u8"},
+        {"title":"鼠*胆*英*雄","url":"https://kk.jinpuyuan.net/dp/?url=https://e.mahua-kb.com/20200924/TMfv8aQ7/index.m3u8"},
+        {"title":"罗*小*黑*战*记","url":"https://video.dious.cc/videos_2019_1/v_19rrhlbh27/1000kb/hls/index.m3u8"}
 
     ];
 
