--- a/movies.html
+++ b/movies.html
@@ -236,6 +236,7 @@
         {"title":"大*赢*家","url":"https://vod2.buycar5.cn/20201027/hABFNvdL/1000kb/hls/index.m3u8"},
         {"title":"举*起*手*来","url":"https://vod.bunediy.com/20200508/2ZkYVE6o/index.m3u8"},
         {"title":"鼠*胆*英*雄","url":"https://kk.jinpuyuan.net/dp/?url=https://e.mahua-kb.com/20200924/TMfv8aQ7/index.m3u8"},
+        {"title":"功*夫*熊*猫1","url":"https://kk.jinpuyuan.net/dp/?url=https://e.mahua-kb.com/20200924/TMfv8aQ7/index.m3u8"},
         {"title":"罗*小*黑*战*记","url":"https://video.dious.cc/videos_2019_1/v_19rrhlbh27/1000kb/hls/index.m3u8"}
 
     ];
