--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="./musics.html">1.音乐</a>
     <a href="./books.html">2.书籍</a>
     <a href="./liveVideo.html">3.电视</a>
-    <a href="./movies.html">4.电影</a>
+    <a href="./webMovies.html">4.电影</a>
     <a href="./game/games.html"></a>
     
     <p style="color: #828282;position:absolute;bottom:0;text-align: center;width: 100%;font-size: 10px;">*会不定时更新资源</p>
