--- a/webMovies.html
+++ b/webMovies.html
@@ -27,8 +27,8 @@
     <li><a href="http://m.rr.tv/detail/35018?snum=1" target="_blank">大明劫</a></li>
     <li><a href="http://m.rr.tv/detail/35301?snum=1" target="_blank">拆弹专家</a></li>
     <li><a href="http://m.rr.tv/detail/34990?snum=1" target="_blank">叶问</a></li>
-    <li><a href="https://www.bilibili.com/bangumi/play/ep258206" target="_blank">摩登时代</a></li>
-    <li><a href="https://www.bilibili.com/bangumi/play/ss28248" target="_blank">淘金记</a></li>
+    <li><a href="https://www.wasu.cn/wap/Play/show/id/9758995?refer=sm.cn" target="_blank">摩登时代</a></li>
+    <li><a href="https://www.wasu.cn/wap/play/show/id/9759053" target="_blank">淘金记</a></li>
     <li><a href="https://v.pptv.com/show/EuKeHYXrW5n8euI.html" target="_blank">战狼</a></li>
     <li><a href="http://www.le.com/ptv/vplay/31349997.html" target="_blank">战狼2</a></li>
     <li><a href="http://www.le.com/ptv/vplay/1355083.html?1441590632" target="_blank">功夫熊猫1</a></li>
