--- a/webMovies.html
+++ b/webMovies.html
@@ -25,6 +25,7 @@
     <li><a href="https://v.pptv.com/show/qnj1ctpAsO5Rzzc.html" target="_blank">胖子行动队</a></li>
     <li><a href="http://m.rr.tv/detail/17727?snum=1" target="_blank">追凶者也</a></li>
     <li><a href="http://m.rr.tv/detail/35018?snum=1" target="_blank">大明劫</a></li>
+    <li><a href="http://m.rr.tv/detail/17642?snum=1" target="_blank">捉妖记</a></li>
     <li><a href="http://m.rr.tv/detail/35301?snum=1" target="_blank">拆弹专家</a></li>
     <li><a href="http://m.rr.tv/detail/34990?snum=1" target="_blank">叶问</a></li>
     <li><a href="https://www.wasu.cn/wap/Play/show/id/9758995?refer=sm.cn" target="_blank">摩登时代</a></li>
