--- a/books.html
+++ b/books.html
@@ -25,34 +25,79 @@
 </head>
 <body>
 
-<a target="_blank" href="./books/一碗清汤芥麦面.pdf">1.一碗清汤芥麦面</a>
-<a target="_blank" href="./books/佐贺的超级阿嬷.pdf">2.佐贺的超级阿嬷</a>
-<a  href="./books/解忧杂货铺.txt">3.解忧杂货铺</a>
-<a target="_blank" href="./books/假如给我三天光明.txt">4.假如给我三天光明</a>
-<a target="_blank" href="./books/在困难的日子里.txt">5.在困难的日子里</a>
-<a target="_blank" href="./books/把梦留住.txt">6.把梦留住</a>
-<a target="_blank" href="./books/童年(高尔基).txt">7.童年(高尔基)</a>
-<a target="_blank" href="./books/草房子.pdf">8.草房子</a>
-<a target="_blank" href="./books/小桔灯.txt">9.小桔灯</a>
-<a target="_blank" href="./books/路遥文集.txt">10.路遥文集</a>
-<a target="_blank" href="./books/平凡的世界.txt">11.平凡的世界</a>
-<a target="_blank" href="./books/人生.txt">12.人生</a>
-<a target="_blank" href="./books/普罗旺斯的一年.txt">13.普罗旺斯的一年</a>
-<a target="_blank" href="./books/重返普罗旺斯.txt">14.重返普罗旺斯</a>
-<a target="_blank" href="./books/金盒子.txt">15.金盒子</a>
-<a target="_blank" href="./books/天蓝色的彼岸.txt">16.天蓝色的彼岸</a>
-<a target="_blank" href="./books/青铜葵花.txt">17.青铜葵花</a>
-<a target="_blank" href="./books/海底两万里.txt">18.海底两万里</a>
-<a target="_blank" href="./books/鲁滨逊漂流记.txt">19.鲁滨逊漂流记</a>
-<a target="_blank" href="./books/狼图腾.txt">20.狼图腾</a>
+<!--<a target="_blank" href="./books/一碗清汤芥麦面.pdf">1.一碗清汤芥麦面</a>-->
+<!--<a target="_blank" href="./books/佐贺的超级阿嬷.pdf">2.佐贺的超级阿嬷</a>-->
+<!--<a  href="./books/解忧杂货铺.txt">3.解忧杂货铺</a>-->
+<!--<a target="_blank" href="./books/假如给我三天光明.txt">4.假如给我三天光明</a>-->
+<!--<a target="_blank" href="./books/在困难的日子里.txt">5.在困难的日子里</a>-->
+<!--<a target="_blank" href="./books/把梦留住.txt">6.把梦留住</a>-->
+<!--<a target="_blank" href="./books/童年(高尔基).txt">7.童年(高尔基)</a>-->
+<!--<a target="_blank" href="./books/草房子.pdf">8.草房子</a>-->
+<!--<a target="_blank" href="./books/小桔灯.txt">9.小桔灯</a>-->
+<!--<a target="_blank" href="./books/路遥文集.txt">10.路遥文集</a>-->
+<!--<a target="_blank" href="./books/平凡的世界.txt">11.平凡的世界</a>-->
+<!--<a target="_blank" href="./books/人生.txt">12.人生</a>-->
+<!--<a target="_blank" href="./books/普罗旺斯的一年.txt">13.普罗旺斯的一年</a>-->
+<!--<a target="_blank" href="./books/重返普罗旺斯.txt">14.重返普罗旺斯</a>-->
+<!--<a target="_blank" href="./books/金盒子.txt">15.金盒子</a>-->
+<!--<a target="_blank" href="./books/天蓝色的彼岸.txt">16.天蓝色的彼岸</a>-->
+<!--<a target="_blank" href="./books/青铜葵花.txt">17.青铜葵花</a>-->
+<!--<a target="_blank" href="./books/海底两万里.txt">18.海底两万里</a>-->
+<!--<a target="_blank" href="./books/鲁滨逊漂流记.txt">19.鲁滨逊漂流记</a>-->
+<!--<a target="_blank" href="./books/狼图腾.txt">20.狼图腾</a>-->
 
-<hr>
-<a target="_blank" href="./books/CuoreHeart爱的教育.pdf">21.CuoreHeart爱的教育</a>
-<a target="_blank" href="./books/简爱（英文版）.txt">22.简爱（英文版）</a>
-<a target="_blank" href="./books/牛津书虫系列50本(英文版).txt">23.牛津书虫系列50本(英文版)</a>
-<a target="_blank" href="./books/格林童话英文版.txt">24.格林童话英文版</a>
-<a target="_blank" href="./books/绿野仙踪(英文版).txt">25.绿野仙踪(英文版)</a>
-<a target="_blank" href="./books/哈利波特1-7英文版.txt">26.哈利波特1-7英文版</a>
+<!--<hr>-->
+<!--<a target="_blank" href="./books/CuoreHeart爱的教育.pdf">21.CuoreHeart爱的教育</a>-->
+<!--<a target="_blank" href="./books/简爱（英文版）.txt">22.简爱（英文版）</a>-->
+<!--<a target="_blank" href="./books/牛津书虫系列50本(英文版).txt">23.牛津书虫系列50本(英文版)</a>-->
+<!--<a target="_blank" href="./books/格林童话英文版.txt">24.格林童话英文版</a>-->
+<!--<a target="_blank" href="./books/绿野仙踪(英文版).txt">25.绿野仙踪(英文版)</a>-->
+<!--<a target="_blank" href="./books/哈利波特1-7英文版.txt">26.哈利波特1-7英文版</a>-->
 
+<ul id="movies_parent" style="list-style-type: none;padding: 0px">
+</ul>
+
+
+<script>
+    const listView = document.getElementById("movies_parent");
+
+    const data = [
+        {"title": "一碗清汤芥麦面.pdf", "url": "./books/一碗清汤芥麦面.pdf"},
+        {"title": "佐贺的超级阿嬷.pdf", "url": "./books/佐贺的超级阿嬷.pdf"},
+        {"title": "解忧杂货铺.txt", "url": "./books/解忧杂货铺.txt"},
+        {"title": "假如给我三天光明.txt", "url": "./books/假如给我三天光明.txt"},
+        {"title": "在困难的日子里.txt", "url": "./books/在困难的日子里.txt"},
+        {"title": "把梦留住.txt", "url": "./books/把梦留住.txt"},
+        {"title": "童年(高尔基).txt", "url": "./books/童年(高尔基).txt"},
+        {"title": "草房子.pdf", "url": "./books/草房子.pdf"},
+        {"title": "小桔灯.txt", "url": "./books/小桔灯.txt"},
+        {"title": "路遥文集.txt", "url": "./books/路遥文集.txt"},
+        {"title": "平凡的世界.txt", "url": "./books/平凡的世界.txt"},
+        {"title": "人生.txt", "url": "./books/人生.txt"},
+        {"title": "普罗旺斯的一年.txt", "url": "./books/普罗旺斯的一年.txt"},
+        {"title": "重返普罗旺斯.txt", "url": "./books/重返普罗旺斯.txt"},
+        {"title": "金盒子.txt", "url": "./books/金盒子.txt"},
+        {"title": "天蓝色的彼岸.txt", "url": "./books/天蓝色的彼岸.txt"},
+        {"title": "青铜葵花.txt", "url": "./books/青铜葵花.txt"},
+        {"title": "海底两万里.txt", "url": "./books/海底两万里.txt"},
+        {"title": "鲁滨逊漂流记.txt", "url": "./books/鲁滨逊漂流记.txt"},
+        {"title": "狼图腾.txt", "url": "./books/狼图腾.txt"},
+        {"title": "西游记.txt", "url": "./books/西游记.txt"},
+        {"title": "guaimomotou.pdf", "url": "./books/guaimomotou.pdf"},
+        {"title": "CuoreHeart爱的教育.pdf", "url": "./books/CuoreHeart爱的教育.pdf"},
+        {"title": "简爱（英文版）.txt", "url": "./books/简爱（英文版）.txt"},
+        {"title": "牛津书虫系列50本(英文版).txt", "url": "./books/牛津书虫系列50本(英文版).txt"},
+        {"title": "格林童话英文版.txt", "url": "./books/格林童话英文版.txt"},
+        {"title": "绿野仙踪(英文版).txt", "url": "./books/绿野仙踪(英文版).txt"},
+        {"title": "哈利波特1-7英文版.txt", "url": "./books/哈利波特1-7英文版.txt"}
+    ];
+
+    let innerString = "";
+    for(let i =0; i<data.length; ++i){
+        innerString+= "<li style='width: 100%'><a href=\""+data[i].url+"\" target=\"_blank\">"+(i + 1)+"."+data[i].title+"</a></li>"
+    }
+
+    listView.innerHTML = innerString;
+</script>
 </body>
 </html>
