--- a/webMovies.html
+++ b/webMovies.html
@@ -36,6 +36,9 @@
         {"title": "胖子行动队", "url": "https://v.pptv.com/show/qnj1ctpAsO5Rzzc.html"},
         {"title": "追凶者也", "url": "http://m.rr.tv/detail/17727?snum=1"},
         {"title": "大明劫", "url": "http://m.rr.tv/detail/35018?snum=1"},
+{"title": "人在囧途", "url": "http://m.rr.tv/detail/34987?snum=1"},
+{"title": "万万没想到", "url": "http://m.rr.tv/detail/17729?snum=1"},
+
         {"title": "捉妖记", "url": "http://m.rr.tv/detail/17642?snum=1"},
         {"title": "拆弹专家", "url": "http://m.rr.tv/detail/35301?snum=1"},
         {"title": "叶问", "url": "http://m.rr.tv/detail/34990?snum=1"},
