--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,35 @@
 <html>
 <head>
 	<style>
+		.result_parent{
+			width:506px;
+			height:100px;
+			background-color: white;
+			border:1px solid #333;
+			border-radius: 10px;
+			text-align: right;
+			line-height: 50px;
+			margin:0 auto;
+
+			padding-right:10px;
+			padding-left:0px;
+
+			text-align: right;
+			line-height: 50px;
+		}
+		#pre_num{
+			height:50px;
+			margin:0px;
+			color:#8e8a89;
+		}
+		#result{
+			text-align: right;
+			line-height: 50px;
+			height:50px;
+			margin:0px;
+			color:#3e3a39;
+		}
+
 		text{
 			width:120px;
 			height:50px;
@@ -16,8 +45,9 @@
 			float: left;
 			text-align: center;
 			line-height: 50px;
-			margin-left: 10px;
 			margin-top: 10px;
+			margin-left: 5px;
+			margin-right: 5px;
 		}
 		.active{
 			background: #aaaaaa;
@@ -25,12 +55,13 @@
 	</style>
 </head>
 <body>
-	<div style="width:500px;height:100px;background-color: white;border:1px solid #333;border-radius: 10px;margin-left: 10px;text-align: right;line-height: 50px;padding-right:10px">
-		<p id="pre_num" style="text-align: right;width:100%;height:50px;line-height: 50px;margin:0px;color:#8e8a89"> </p>
-		<p id="result" style="text-align: right;line-height: 50px;margin:0px;color:#3e3a39">0</p>
+
+	<div class="result_parent">
+		<p id="pre_num"> </p>
+		<p id="result">0</p>
 	</div>
 	
-	<div class="btn_parent" style="width:520px">
+	<div class="btn_parent" style="width:520px;margin:0 auto">
 		<text data-index=0 id="btn_1">1</text>
 		<text data-index=1 id="btn_2">2</text>
 
