--- a/books.html
+++ b/books.html
@@ -24,36 +24,7 @@
     </style>
 </head>
 <body>
-
-<!--<a target="_blank" href="./books/一碗清汤芥麦面.pdf">1.一碗清汤芥麦面</a>-->
-<!--<a target="_blank" href="./books/佐贺的超级阿嬷.pdf">2.佐贺的超级阿嬷</a>-->
-<!--<a  href="./books/解忧杂货铺.txt">3.解忧杂货铺</a>-->
-<!--<a target="_blank" href="./books/假如给我三天光明.txt">4.假如给我三天光明</a>-->
-<!--<a target="_blank" href="./books/在困难的日子里.txt">5.在困难的日子里</a>-->
-<!--<a target="_blank" href="./books/把梦留住.txt">6.把梦留住</a>-->
-<!--<a target="_blank" href="./books/童年(高尔基).txt">7.童年(高尔基)</a>-->
-<!--<a target="_blank" href="./books/草房子.pdf">8.草房子</a>-->
-<!--<a target="_blank" href="./books/小桔灯.txt">9.小桔灯</a>-->
-<!--<a target="_blank" href="./books/路遥文集.txt">10.路遥文集</a>-->
-<!--<a target="_blank" href="./books/平凡的世界.txt">11.平凡的世界</a>-->
-<!--<a target="_blank" href="./books/人生.txt">12.人生</a>-->
-<!--<a target="_blank" href="./books/普罗旺斯的一年.txt">13.普罗旺斯的一年</a>-->
-<!--<a target="_blank" href="./books/重返普罗旺斯.txt">14.重返普罗旺斯</a>-->
-<!--<a target="_blank" href="./books/金盒子.txt">15.金盒子</a>-->
-<!--<a target="_blank" href="./books/天蓝色的彼岸.txt">16.天蓝色的彼岸</a>-->
-<!--<a target="_blank" href="./books/青铜葵花.txt">17.青铜葵花</a>-->
-<!--<a target="_blank" href="./books/海底两万里.txt">18.海底两万里</a>-->
-<!--<a target="_blank" href="./books/鲁滨逊漂流记.txt">19.鲁滨逊漂流记</a>-->
-<!--<a target="_blank" href="./books/狼图腾.txt">20.狼图腾</a>-->
-
-<!--<hr>-->
-<!--<a target="_blank" href="./books/CuoreHeart爱的教育.pdf">21.CuoreHeart爱的教育</a>-->
-<!--<a target="_blank" href="./books/简爱（英文版）.txt">22.简爱（英文版）</a>-->
-<!--<a target="_blank" href="./books/牛津书虫系列50本(英文版).txt">23.牛津书虫系列50本(英文版)</a>-->
-<!--<a target="_blank" href="./books/格林童话英文版.txt">24.格林童话英文版</a>-->
-<!--<a target="_blank" href="./books/绿野仙踪(英文版).txt">25.绿野仙踪(英文版)</a>-->
-<!--<a target="_blank" href="./books/哈利波特1-7英文版.txt">26.哈利波特1-7英文版</a>-->
-
+    <p style="margin-left: 40px;font-size: 10px;color: #666666">pdf文件需打开需浏览器查看</p>
 <ul id="movies_parent" style="list-style-type: none;padding: 0px">
 </ul>
 
