音乐添加preload属性

--- a/musics.html
+++ b/musics.html
@@ -31,7 +31,7 @@
 <ol id="music_list"></ol>
 
 
-<audio height="100px" autoplay controls id="audio_view"></audio>
+<audio preload="auto" height="100px" autoplay controls id="audio_view"></audio>
 <script>
     const audioView = document.querySelector("#audio_view");
     const musicListView = document.querySelector("#music_list");
